refactor : HomeService에서 json 관련 로직들을 JsonUtils에서 처리하도록 변경